ToDoList 구현 - aside 완료 - Information 완료 - Todo 구현중

--- a/todo/index.html
+++ b/todo/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
         </aside>
-        <main class="main-container">
+        <main class="main-container main-hidden">
             <header class="main-header">
                 <h1 class="main-title">User Information</h1>
             </header>
@@ -58,7 +58,7 @@
                         </div>
                         <div class="info-input-container">
                             <label for="email">e-Mail</label>
-                            <input type="text" id="name" class="info-input" disabled>
+                            <input type="text" id="email" class="info-input" disabled>
                         </div>
                     </div>
                     <div class="detail-right">
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </main>
-        <main class="main-container main-hidden">
+        <main class="main-container">
             <header class="main-header">
                 <h1 class="main-title">ToDo</h1>
                 <div class="todo-input-container">
@@ -96,7 +96,7 @@
                 </div>
             </header>
             <ul class="todo-content-list">
-                <li class="content-container">
+                <!-- <li class="content-container">
                     <div class="content-header">
                         <div class="todo-date"> 2023. 03. 15</div>
                         <div class="todo-date-time">17:42:50</div>
@@ -112,7 +112,7 @@
                             <i class="fa-regular fa-trash-can"></i>
                         </button>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </main>
     </div>
