--- a/todo/index.html
+++ b/todo/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/modal.css">
     <link rel="stylesheet" href="./css/aside.css">
     <link rel="stylesheet" href="./css/index.css">
     <title>TODO-LIST</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container"> <!-- aside -->
         <aside class="menu-aside hidden-menu">
             <button class="menu-button">▶</button>
             <header class="aside-header">
                 <h1 class="header-title"><i class="fa-regular fa-calendar-check"></i>TODOLIST</h1>
             </header>
             <nav class="menu-nav">
-                <ul class="menu-list">
+                <ul class="menu-list"> <!-- aside menuList-->
                     <a href="javascript:void(0)" class="menu-items">
                         <li><i class="fa-regular fa-user"></i>User Infomation</li>
                     </a>
@@ -28,8 +29,8 @@
                     </a>
                 </ul>
             </nav>
-        </aside>
-        <main class="main-container main-hidden">
+        </aside>  
+        <main class="main-container">  <!--userInfo Main--> 
             <header class="main-header">
                 <h1 class="main-title">User Information</h1>
             </header>
@@ -37,12 +38,12 @@
                 <form class="photo-form">
                     <input type="file" class="photo-file" name="file">
                 </form>
-                <img src="./images/javascript.jpeg">
+                <img src="">    <!--이미지-->
                 <div class="change-nav">클릭하여 이미지 변경</div>
             </div>
-            <div class="info-main">
+            <div class="info-main">             <!--정보입력-->
                 <h1 class="info-title"
-                    >About Me
+                    >About Me                       
                     <button class="modify-button m-aboutme">
                         <i class="fa-regular fa-pen-to-square"></i>
                     </button>
@@ -58,7 +59,7 @@
                         </div>
                         <div class="info-input-container">
                             <label for="email">e-Mail</label>
-                            <input type="text" id="email" class="info-input" disabled>
+                            <input type="email" id="email" class="info-input" disabled>
                         </div>
                     </div>
                     <div class="detail-right">
@@ -85,8 +86,8 @@
                     <textarea class="introduce-input" disabled></textarea>              
                 </div>
             </div>
-        </main>
-        <main class="main-container">
+        </main>            
+        <main class="main-container main-hidden">       <!-- ToDoList Main -->
             <header class="main-header">
                 <h1 class="main-title">ToDo</h1>
                 <div class="todo-input-container">
@@ -102,7 +103,7 @@
                         <div class="todo-date-time">17:42:50</div>
                     </div>
                     <div class="content-main">
-                        ToDoList insert api, service 작성하기
+                        ToDoList insert api, service 구현
                     </div>
                     <div class="content-footer">
                         <button class="modify-button">
@@ -116,9 +117,24 @@
             </ul>
         </main>
     </div>
+    <div class="modal-container modal-hidden">
+        <div class="modal-section">
+            <div class="modal-header">
+                <h1 class="modal-title">ToDo 삭제</h1>
+            </div>
+            <div class="modal-main">
+                <p class="modal-message">ToDo를 삭제하시겠습니까?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="modal-ok-button">확인</button>
+                <button type="button" class="modal-cancel-button">취소</button>
+            </div>
+        </div>
+    </div>
     <script src="./js/aside.js"></script>
     <script src="./js/information.js"></script>
     <script src="./js/todo.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
